// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-link should render with _href="https://example.com" _icons="codicon codicon-home" _label="Label" _target="self" _tooltipAlign="bottom" 1`] = `
<kol-link>
  <template shadowrootmode="open">
    <div class="kol-link kol-link--external-link kol-link--inline">
      <a class="kol-link__anchor" href="https://example.com" rel="noopener noreferrer" target="self">
        <span class="kol-link__text kol-span">
          <span class="kol-span__container">
            <i aria-hidden="true" class="codicon codicon-home kol-icon kol-icon__icon kol-span__icon kol-span__icon--left" role="presentation"></i>
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert" slot="expert"></slot>
            </span>
          </span>
        </span>
        <i aria-label="kol-open-link-in-tab" class="kol-icon kol-icon__icon kol-link__icon kolicon-link-external" role="img"></i>
      </a>
    </div>
  </template>
</kol-link>
`;

exports[`kol-link should render with _href="https://example.com" _icons="codicon codicon-home" _label="Label" _target="self" _tooltipAlign="left" 1`] = `
<kol-link>
  <template shadowrootmode="open">
    <div class="kol-link kol-link--external-link kol-link--inline">
      <a class="kol-link__anchor" href="https://example.com" rel="noopener noreferrer" target="self">
        <span class="kol-link__text kol-span">
          <span class="kol-span__container">
            <i aria-hidden="true" class="codicon codicon-home kol-icon kol-icon__icon kol-span__icon kol-span__icon--left" role="presentation"></i>
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert" slot="expert"></slot>
            </span>
          </span>
        </span>
        <i aria-label="kol-open-link-in-tab" class="kol-icon kol-icon__icon kol-link__icon kolicon-link-external" role="img"></i>
      </a>
    </div>
  </template>
</kol-link>
`;

exports[`kol-link should render with _href="https://example.com" _icons="codicon codicon-home" _label="Label" _target="self" _tooltipAlign="right" 1`] = `
<kol-link>
  <template shadowrootmode="open">
    <div class="kol-link kol-link--external-link kol-link--inline">
      <a class="kol-link__anchor" href="https://example.com" rel="noopener noreferrer" target="self">
        <span class="kol-link__text kol-span">
          <span class="kol-span__container">
            <i aria-hidden="true" class="codicon codicon-home kol-icon kol-icon__icon kol-span__icon kol-span__icon--left" role="presentation"></i>
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert" slot="expert"></slot>
            </span>
          </span>
        </span>
        <i aria-label="kol-open-link-in-tab" class="kol-icon kol-icon__icon kol-link__icon kolicon-link-external" role="img"></i>
      </a>
    </div>
  </template>
</kol-link>
`;

exports[`kol-link should render with _href="https://example.com" _icons="codicon codicon-home" _label="Label" _target="self" _tooltipAlign="top" _hideLabel=true 1`] = `
<kol-link>
  <template shadowrootmode="open">
    <div class="kol-link kol-link--external-link kol-link--hide-label kol-link--inline">
      <a aria-label="Label (kol-open-link-in-tab)" class="kol-link__anchor" href="https://example.com" rel="noopener noreferrer" target="self">
        <span class="kol-link__text kol-span kol-span--hide-label">
          <span class="kol-span__container">
            <i aria-hidden="true" class="codicon codicon-home kol-icon kol-icon__icon kol-span__icon kol-span__icon--left" role="presentation"></i>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert" slot="expert"></slot>
            </span>
          </span>
        </span>
        <i aria-hidden="true" class="kol-icon kol-icon__icon kol-link__icon kolicon-link-external" role="presentation"></i>
      </a>
      <div class="kol-tooltip__floating">
        <div class="kol-tooltip__arrow"></div>
        <span class="kol-span kol-tooltip__content">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden=""></span>
          </span>
        </span>
      </div>
    </div>
  </template>
</kol-link>
`;

exports[`kol-link should render with _href="https://example.com" _icons="codicon codicon-home" _label="Label" _target="self" _tooltipAlign="top" 1`] = `
<kol-link>
  <template shadowrootmode="open">
    <div class="kol-link kol-link--external-link kol-link--inline">
      <a class="kol-link__anchor" href="https://example.com" rel="noopener noreferrer" target="self">
        <span class="kol-link__text kol-span">
          <span class="kol-span__container">
            <i aria-hidden="true" class="codicon codicon-home kol-icon kol-icon__icon kol-span__icon kol-span__icon--left" role="presentation"></i>
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert" slot="expert"></slot>
            </span>
          </span>
        </span>
        <i aria-label="kol-open-link-in-tab" class="kol-icon kol-icon__icon kol-link__icon kolicon-link-external" role="img"></i>
      </a>
    </div>
  </template>
</kol-link>
`;

exports[`kol-link should render with _href="https://example.com" _icons="codicon codicon-home" _label="Label" _target="self" 1`] = `
<kol-link>
  <template shadowrootmode="open">
    <div class="kol-link kol-link--external-link kol-link--inline">
      <a class="kol-link__anchor" href="https://example.com" rel="noopener noreferrer" target="self">
        <span class="kol-link__text kol-span">
          <span class="kol-span__container">
            <i aria-hidden="true" class="codicon codicon-home kol-icon kol-icon__icon kol-span__icon kol-span__icon--left" role="presentation"></i>
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert" slot="expert"></slot>
            </span>
          </span>
        </span>
        <i aria-label="kol-open-link-in-tab" class="kol-icon kol-icon__icon kol-link__icon kolicon-link-external" role="img"></i>
      </a>
    </div>
  </template>
</kol-link>
`;

exports[`kol-link should render with _label="Label" _href="" _download="download-file.zip" _target="blank" 1`] = `
<kol-link>
  <template shadowrootmode="open">
    <div class="kol-link kol-link--external-link kol-link--inline">
      <a class="kol-link__anchor" download="download-file.zip" href="javascript:void(0);" rel="noopener noreferrer" target="blank">
        <span class="kol-link__text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert" slot="expert"></slot>
            </span>
          </span>
        </span>
        <i aria-label="kol-open-link-in-tab" class="kol-icon kol-icon__icon kol-link__icon kolicon-link-external" role="img"></i>
      </a>
    </div>
  </template>
</kol-link>
`;
